bad/sub_invalid_types_bool_null.example_compiler_output
ERROR
[1mbad/sub_invalid_types_bool_null.lat:3:7: [1;31merror: [0;1msubtraction is defined only for int values, not `boolean` and `null`[m
	true - null;
	     [1;32m^[m
